--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  repository":"arthur-peka/generator-dotnetcore",
+  "repository":"arthur-peka/generator-dotnetcore",
   "keywords": [
     "yeoman-generator",
     "dotnet-core",
